--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -1,4 +1,4 @@
-// spell-checker: ignore nowrap,greenyellow,lightgray,rgba
+/* spell-checker: ignore nowrap,greenyellow,lightgray,rgba */
 
 :root {
 	--our-color-yellow: #ffd43b;
