--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -1,3 +1,5 @@
+/* spell-checker: ignore nowrap,greenyellow,lightgray,rgba */
+
 :root {
 	--our-color-yellow: #ffd43b;
 	--our-color-blue: #599dd2;
@@ -991,7 +993,7 @@ details.sd-dropdown > .sd-summary-content {
 	background: var(--our-color-blue);
 	color: white;
 	border-color: var(--our-color-blue);
-	font-weight: 600;
+	text-shadow: 0 0 0.4px currentColor;
 }
 
 /* Show the content of the active tab */
