added a few styles to carousel button for proper alignment with new icon

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -897,6 +897,11 @@ details.sd-dropdown > .sd-summary-content {
 	transform: translateY(0);
 }
 
+.carousel-button a {
+	display: flex;
+	gap: 5px;
+}
+
 .carousel-tabs-side {
 	display: none;
 }
