update nav styles to support SVG icons instead of font icons

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -16,6 +16,13 @@ html {
 }
 */
 
+.wy-nav-top svg {
+	font-size: 30px;
+ float: left;
+ cursor: pointer;
+ padding-top: inherit;
+}
+
 .wy-nav-content {
 	max-width: 1000px !important;
 }
