Remove FA Font Usage - SVG Inlining (#102)
* We use inline SVG rather than fontawesome font and we use inline SVG for images

* Also made some icons more consistent

---------

Co-authored-by: Kay Hayen <kay.hayen@gmail.com>

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -16,6 +16,13 @@ html {
 }
 */
 
+.wy-nav-top svg {
+	width: 30px;
+	float: left;
+	cursor: pointer;
+	padding-top: inherit;
+}
+
 .wy-nav-content {
 	max-width: 1000px !important;
 }
@@ -546,6 +553,11 @@ a[class~="headerlink"]:visited {
 	width: 250px;
 }
 
+.wy-menu-vertical a {
+	display: flex;
+	gap: 5px;
+}
+
 .wy-side-scroll {
 	/* instead of 320 */
 	width: 250px;
@@ -571,15 +583,13 @@ a[class~="headerlink"]:visited {
 
 .hub-card:hover {
 	transform: translateY(-5px) scale(1.005) translateZ(0);
-	box-shadow:
-		0 24px 36px rgba(0, 0, 0, 0.11),
+	box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11),
 		0 24px 46px var(--box-shadow-color);
 }
 
 .hub-card:active {
 	transform: scale(1) translateZ(0);
-	box-shadow:
-		0 15px 24px rgba(0, 0, 0, 0.11),
+	box-shadow: 0 15px 24px rgba(0, 0, 0, 0.11),
 		0 15px 24px var(--box-shadow-color);
 }
 
@@ -881,9 +891,7 @@ details.sd-dropdown > .sd-summary-content {
 	cursor: pointer;
 	font-size: 1rem;
 	font-weight: 600;
-	transition:
-		background-color 0.3s ease,
-		transform 0.2s ease;
+	transition: background-color 0.3s ease, transform 0.2s ease;
 	text-decoration: none;
 	width: fit-content;
 }
@@ -895,6 +903,11 @@ details.sd-dropdown > .sd-summary-content {
 
 .carousel-main .carousel-button:active {
 	transform: translateY(0);
+}
+
+.carousel-main .carousel-button .carousel-button-link {
+	display: flex;
+	gap: 5px;
 }
 
 .carousel-tabs-side {
