Added utility classes to replace FA ones

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -16,6 +16,18 @@ html {
 }
 */
 
+.nuitka-fa {
+  display: inline-block;
+  width: 1em;               
+  height: 1em;
+  vertical-align: middle;
+}
+
+.nuitka-fw {
+	 width: 1.25em;
+  text-align: center;
+}
+
 .wy-nav-top svg {
 	width: 30px;
 	float: left;
