Enhancement - Remove jQuery, fix navbar menubutton
* Fix menu button

* Removed jQuery and added fallback

* Remove navbar script fallback

* Add JS for navbar behavior

* Remove jQuery from output

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -16,9 +16,24 @@ html {
 }
 */
 
+/* Navbar */
+
+[data-toggle="wy-nav-top"].menu-open {
+  float: right;
+}
+[data-toggle="wy-nav-top"] {
+  float: left;
+}
+
+@media screen and (max-width: 768px) {
+    .wy-nav-side.shift {
+        width: 70%;
+    }
+}
+
 .nuitka-fa {
   display: inline-block;
-  width: 1em;               
+  width: 1em;
   height: 1em;
   vertical-align: middle;
 }
@@ -33,6 +48,7 @@ html {
 	float: left;
 	cursor: pointer;
 	padding-top: inherit;
+	height: auto;
 }
 
 .wy-nav-content {
