--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -114,6 +114,11 @@ h3 {
 	margin-bottom: 10px !important;
 }
 
+button svg {
+	 width: 1em;
+  height: 1em;
+}
+
 /* Stripe links should be forced to color standing out */
 .nuitka-buy a {
 	vertical-align: bottom;
@@ -164,7 +169,6 @@ h3 {
 
 .nuitka-grid-offer ul li::marker {
 	content: "\f00a";
-	font-family: FontAwesome;
 	font-size: var(--icon-size);
 	box-sizing: border-box;
 	min-width: 0;
