Repair bullet item CSS
* The image still didn't display for me, and it seems to have
  no value even when I make it. Cleanup up a bit of the useless
  stuff.

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -148,9 +148,11 @@ button svg {
 }
 
 .nuitka-grid-offer ul li {
-	list-style: none !important;
 	margin-left: 0 !important;
 	margin-right: 0 !important;
+	padding-left: var(--gutter);
+	box-sizing: border-box;
+	min-width: 0;
 }
 
 .nuitka-grid-offer ul {
@@ -161,25 +163,13 @@ button svg {
 	min-width: 0;
 }
 
-.nuitka-grid-offer ul li {
-	padding-left: var(--gutter);
-	box-sizing: border-box;
-	min-width: 0;
-	position: relative;
-}
+/*  TODO: This SVG is not really any useful, when it displays it's just a
+    circle like every other font does.
 
-.nuitka-grid-offer ul li::before {
-	content: '';
-	position: absolute;
-	left: calc(-1 * var(--gutter) - var(--icon-size));
-	top: 0.25em;
-	width: var(--icon-size);
-	height: var(--icon-size);
-	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path d="M64 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64z" fill="white"/></svg>');
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
+.nuitka-grid-offer ul li {
+	list-style: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path d="M64 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64z" fill="white"/></svg>') !important;
 }
+*/
 
 .nuitka-price p {
 	white-space: nowrap;
