--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -7,7 +7,7 @@
 	--our-color-dark-blue: #2a3990;
 	--our-color-green: #00916e;
 	--our-carousel-light-blue: #d2e6f4;
-	--our-lightgrey: #f8f9fa
+	--our-lightgrey: #f8f9fa;
 }
 
 /* Google Chrome still hates our menu
@@ -19,28 +19,28 @@ html {
 /* Navbar */
 
 [data-toggle="wy-nav-top"].menu-open {
-  float: right;
+	float: right;
 }
 [data-toggle="wy-nav-top"] {
-  float: left;
+	float: left;
 }
 
 @media screen and (max-width: 768px) {
-    .wy-nav-side.shift {
-        width: 70%;
-    }
+	.wy-nav-side.shift {
+		width: 70%;
+	}
 }
 
 .nuitka-fa {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  vertical-align: middle;
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	vertical-align: middle;
 }
 
 .nuitka-fw {
-	 width: 1.25em;
-  text-align: center;
+	width: 1.25em;
+	text-align: center;
 }
 
 .wy-nav-top svg {
@@ -115,42 +115,42 @@ h3 {
 }
 
 button svg {
-	 width: 1em;
-  height: 1em;
+	width: 1em;
+	height: 1em;
 }
 
 .copybtn {
- 	position: absolute;
-  display: flex;
-  top: 0.3em;
-  right: 0.3em;
-  width: 1.7em;
-  height: 1.7em;
-  opacity: 0;
-  user-select: none;
-  background-color: rgb(246, 248, 250);
-  color: rgb(87, 96, 106);
-		transition: opacity 0.3s, border 0.3s, background-color 0.3s;
-		padding: 0px;
-		outline: none;
-		border-radius: 0.4em;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(27, 31, 36, 0.15);
-  border-image: initial;
-		justify-content: center;
-		align-items: center;
+	position: absolute;
+	display: flex;
+	top: 0.3em;
+	right: 0.3em;
+	width: 1.7em;
+	height: 1.7em;
+	opacity: 0;
+	user-select: none;
+	background-color: rgb(246, 248, 250);
+	color: rgb(87, 96, 106);
+	transition: opacity 0.3s, border 0.3s, background-color 0.3s;
+	padding: 0px;
+	outline: none;
+	border-radius: 0.4em;
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgba(27, 31, 36, 0.15);
+	border-image: initial;
+	justify-content: center;
+	align-items: center;
 
-		svg {
-			width: 1.3em;
-			height: 1.3em;
-		}
+	svg {
+		width: 1.3em;
+		height: 1.3em;
+	}
 }
 
 .copybtn:hover {
-		background-color: rgb(221, 225, 230);
-		border-color: rgba(27, 31, 36, 0.35);
-		opacity: 1;
+	background-color: rgb(221, 225, 230);
+	border-color: rgba(27, 31, 36, 0.35);
+	opacity: 1;
 }
 
 /* Stripe links should be forced to color standing out */
@@ -1115,7 +1115,7 @@ details.sd-dropdown > .sd-summary-content {
 	padding: 2rem;
 	max-width: 800px;
 	border-radius: 8px;
-	background-color: var(--our-lightgrey);;
+	background-color: var(--our-lightgrey);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease;
 	animation: fadeIn 1s ease-in-out;
@@ -1142,7 +1142,7 @@ details.sd-dropdown > .sd-summary-content {
 .coming-soon-return {
 	display: flex;
 	flex-wrap: wrap;
- justify-content: center;
+	justify-content: center;
 	margin-top: 2rem;
 	line-height: 2.5;
 	gap: 0.5rem;
@@ -1188,7 +1188,7 @@ details.sd-dropdown > .sd-summary-content {
 }
 
 .coming-soon-return a:hover {
-	background-color: var(--our-color-dark-blue)b;
+	background-color: var(--our-color-dark-blue) b;
 	text-decoration: none;
 }
 
