Fixed copy button and bullet points (#136)
* Fixed copy button and bullet points

* Force rebuild when our CSS changes (and images)

---------

Co-authored-by: Kay Hayen <kay.hayen@gmail.com>

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -7,7 +7,7 @@
 	--our-color-dark-blue: #2a3990;
 	--our-color-green: #00916e;
 	--our-carousel-light-blue: #d2e6f4;
-	--our-lightgrey: #f8f9fa
+	--our-lightgrey: #f8f9fa;
 }
 
 /* Google Chrome still hates our menu
@@ -19,28 +19,28 @@ html {
 /* Navbar */
 
 [data-toggle="wy-nav-top"].menu-open {
-  float: right;
+	float: right;
 }
 [data-toggle="wy-nav-top"] {
-  float: left;
+	float: left;
 }
 
 @media screen and (max-width: 768px) {
-    .wy-nav-side.shift {
-        width: 70%;
-    }
+	.wy-nav-side.shift {
+		width: 70%;
+	}
 }
 
 .nuitka-fa {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  vertical-align: middle;
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	vertical-align: middle;
 }
 
 .nuitka-fw {
-	 width: 1.25em;
-  text-align: center;
+	width: 1.25em;
+	text-align: center;
 }
 
 .wy-nav-top svg {
@@ -115,8 +115,42 @@ h3 {
 }
 
 button svg {
-	 width: 1em;
-  height: 1em;
+	width: 1em;
+	height: 1em;
+}
+
+.copybtn {
+	position: absolute;
+	display: flex;
+	top: 0.3em;
+	right: 0.3em;
+	width: 1.7em;
+	height: 1.7em;
+	opacity: 0;
+	user-select: none;
+	background-color: rgb(246, 248, 250);
+	color: rgb(87, 96, 106);
+	transition: opacity 0.3s, border 0.3s, background-color 0.3s;
+	padding: 0px;
+	outline: none;
+	border-radius: 0.4em;
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgba(27, 31, 36, 0.15);
+	border-image: initial;
+	justify-content: center;
+	align-items: center;
+
+	svg {
+		width: 1.3em;
+		height: 1.3em;
+	}
+}
+
+.copybtn:hover {
+	background-color: rgb(221, 225, 230);
+	border-color: rgba(27, 31, 36, 0.35);
+	opacity: 1;
 }
 
 /* Stripe links should be forced to color standing out */
@@ -163,13 +197,9 @@ button svg {
 	min-width: 0;
 }
 
-/*  TODO: This SVG is not really any useful, when it displays it's just a
-    circle like every other font does.
-
 .nuitka-grid-offer ul li {
-	list-style: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path d="M64 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64z" fill="white"/></svg>') !important;
+	list-style: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 512 512"><path fill="white" d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"/></svg>') !important;
 }
-*/
 
 .nuitka-price p {
 	white-space: nowrap;
@@ -190,7 +220,6 @@ button svg {
 .nuitka-price i {
 	font-style: normal;
 	font-size: 18px;
-	vertical-align: 3px;
 }
 
 .nuitka-grid-offer .sd-card-text {
@@ -1086,7 +1115,7 @@ details.sd-dropdown > .sd-summary-content {
 	padding: 2rem;
 	max-width: 800px;
 	border-radius: 8px;
-	background-color: var(--our-lightgrey);;
+	background-color: var(--our-lightgrey);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease;
 	animation: fadeIn 1s ease-in-out;
@@ -1113,7 +1142,7 @@ details.sd-dropdown > .sd-summary-content {
 .coming-soon-return {
 	display: flex;
 	flex-wrap: wrap;
- justify-content: center;
+	justify-content: center;
 	margin-top: 2rem;
 	line-height: 2.5;
 	gap: 0.5rem;
@@ -1159,7 +1188,7 @@ details.sd-dropdown > .sd-summary-content {
 }
 
 .coming-soon-return a:hover {
-	background-color: var(--our-color-dark-blue)b;
+	background-color: var(--our-color-dark-blue);
 	text-decoration: none;
 }
 
