--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -8,7 +8,6 @@
 	--our-color-green: #00916e;
 	--our-carousel-light-blue: #d2e6f4;
 	--our-lightgrey: #f8f9fa;
-	--our-lightgrey: #f8f9fa;
 }
 
 /* Google Chrome still hates our menu
@@ -21,17 +20,12 @@ html {
 
 [data-toggle="wy-nav-top"].menu-open {
 	float: right;
-	float: right;
 }
 [data-toggle="wy-nav-top"] {
-	float: left;
 	float: left;
 }
 
 @media screen and (max-width: 768px) {
-	.wy-nav-side.shift {
-		width: 70%;
-	}
 	.wy-nav-side.shift {
 		width: 70%;
 	}
@@ -42,15 +36,9 @@ html {
 	width: 1em;
 	height: 1em;
 	vertical-align: middle;
-	display: inline-block;
-	width: 1em;
-	height: 1em;
-	vertical-align: middle;
 }
 
 .nuitka-fw {
-	width: 1.25em;
-	text-align: center;
 	width: 1.25em;
 	text-align: center;
 }
@@ -127,8 +115,6 @@ h3 {
 }
 
 button svg {
-	width: 1em;
-	height: 1em;
 	width: 1em;
 	height: 1em;
 }
@@ -1130,7 +1116,6 @@ details.sd-dropdown > .sd-summary-content {
 	max-width: 800px;
 	border-radius: 8px;
 	background-color: var(--our-lightgrey);
-	background-color: var(--our-lightgrey);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease;
 	animation: fadeIn 1s ease-in-out;
@@ -1157,7 +1142,6 @@ details.sd-dropdown > .sd-summary-content {
 .coming-soon-return {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
 	justify-content: center;
 	margin-top: 2rem;
 	line-height: 2.5;
@@ -1204,7 +1188,7 @@ details.sd-dropdown > .sd-summary-content {
 }
 
 .coming-soon-return a:hover {
-	background-color: var(--our-color-dark-blue) b;
+	background-color: var(--our-color-dark-blue);
 	text-decoration: none;
 }
 
