Fix circle image container width for better responsiveness

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -834,7 +834,7 @@ img.fp-circle-image {
 	}
 
 	.fp-circle-image-container {
-		width: auto;
+		width: 100%;
 		height: fit-content;
 		padding-bottom: 1rem;
 	}
